<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/create_text"
        android:layout_width="316dp"
        android:layout_height="97dp"
        android:ems="10"
        android:hint="@string/write_comment" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/location_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_text"
        android:layout_marginTop="14dp"
        android:text="@string/cust_location"
        android:textSize="20sp" />

    <Button
        android:id="@+id/create_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/location_label"
        android:layout_marginTop="96dp"
        android:text="@string/post" />

    <EditText
        android:id="@+id/latitude_box"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/longitude_box"
        android:layout_alignBottom="@+id/longitude_box"
        android:layout_toRightOf="@+id/create_post"
        android:ems="10" />

    <EditText
        android:id="@+id/longitude_box"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/location_label"
        android:layout_marginTop="26dp"
        android:ems="10" />

    <TextView
        android:id="@+id/latitude_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/latitude_box"
        android:text="@string/latitude"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/longitude_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/longitude_box"
        android:layout_toLeftOf="@+id/longitude_box"
        android:text="@string/longitude"
        android:textSize="14sp" />

</RelativeLayout>